Update Bus Stop Data feature has been Added and Map Modals that are aligned in top of window is now set to anchor in bottom modals

--- a/src/styles/subcomponents/Mapmanagement.css
+++ b/src/styles/subcomponents/Mapmanagement.css
@@ -317,7 +317,7 @@
 
 #div_selected_details{
     background-color: white;
-    top: 10px;
+    bottom: 335px;
     right: -310px;
     width: 100%;
     max-width: 300px;
@@ -426,6 +426,7 @@
     max-width: 450px;
     display: flex;
     flex-direction: column;
+    font-family: 'Roboto', sans-serif;
 }
 
 #div_routes_window_header{
@@ -809,13 +810,15 @@
   #div_routes_info{
     background-color: white;
     right: -470px;
-    top: 10px;
+    /* top: 10px; */
+    bottom: 335px;
     height: 100%;
     max-height: 270px;
     width: 100%;
     max-width: 450px;
     display: flex;
     flex-direction: column;
+    font-family: 'Roboto', sans-serif;
   }
 
   #div_route_info_header{
@@ -1082,4 +1085,63 @@
     font-weight: bold;
     text-align: left;
     margin-bottom: 5px;
+  }
+
+  #div_busstop_edit_form{
+    background-color: transparent;
+    width: calc(100% - 20px);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .p_bus_stop_information_labels_edit{
+    font-size: 13px;
+    color: black;
+    margin: 0px;
+    text-align: left;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+
+  .p_bus_stop_information_labels_edit:first-of-type{
+    margin-bottom: 15px;
+  }
+
+  .input_station_edit{
+    width: calc(95% - 10px);
+    background-color: #ccc;
+    border: none;
+    height: 25px;
+    border-radius: 5px;
+    font-size: 13px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-bottom: 10px;
+    color: #555;
+  }
+
+  #div_edit_busstop_btns_holder{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-top: 5px;
+    justify-content: left;
+  }
+
+  .btn_edit_busstop_actions{
+    width: 65px;
+    height: 25px;
+    border: none;
+    background-color: lime;
+    font-size: 13px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
   }
